migration-assessment/kubernetes/ingress/petclinic-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radiant-petclinic-ingress
  namespace: radiant-petclinic
  # annotations:
  #   # nginx.ingress.kubernetes.io/rewrite-target: /
  #   nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  ingressClassName: nginx

  rules:
    - host: radiant-petclinic.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radiant-petclinic-service
                port:
                  number: 80
